--- a/views/home.html
+++ b/views/home.html
@@ -4,85 +4,150 @@
         <meta charset="UTF-8">
         <title>Bienvenidxs a MercadoLiebre</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/5b0b635746.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <div id="top-header">        
-                <img src="images/logo-mercado-liebre.svg" width="100" alt="Logo de MercadoLiebre">
-                <p id="busqueda">Barra de búsqueda <i class="fa-solid fa-magnifying-glass"></i></p>                
-                <p id="cuotas"><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</p>                
+                <div class="logo">
+                <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+                </div>
+                <div class="form" action="#" method="GET">
+                    <div class="input">Buscar productos, marcas</div>
+                    <div class="submit"><i class="fa fa-search"></i></div>
+                </div>                
+                <p class="cuotas"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>                
             </div>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul>
 
-            <a href="#" id="boton-lineas"> <i class="fa-solid fa-bars"></i> </a>
-            <nav>
-                <ul>
-                    <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Tiendas Oficiales</a></li>
-                    <li><a href="#">Vender</a></li>
-                    <li><a href="#">Ayuda</a></li>
-                </ul>
-                <ul>
-                    <li><a href="/register">Creá tu cuenta <i class="fa-solid fa-address-card"></i></a></li>
-                    <li><a href="/login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
-                    <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+            </ul>
+        </nav>
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
         </header>
-        <section>
-            <img id=banner src="images/img-home-banner.jpg" width="360" alt="Banner de ofertas">
+        <section class="banner">
+            <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
         </section>
         <main>
-            <section>
-                <h3>Basado en tu última visita</h3>
-                <img src="images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
-                <!--iconito de camión-->
-                <p >$6.770</p>
-                <p>40% off</p>
-                <h4>Cafetera Moulinex</h4>
-                <img src="images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
-                <!--iconito de camión-->
-                <p >$230.000</p>
-                <p>20% off</p>
-                <h4>MacBook Pro 2019</h4>
-                <img src="images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
-                <!--iconito de camión-->
-                <p >$70.500</p>
-                <p>10% off</p>
-                <h4>Teléfono móvil Samsung Galaxy S10</h4>
-                <img src="images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
-                <!--iconito de camión-->
-                <p >$23.200</p>
-                <p>5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
-            </section>
-            <section>
-                <h3>Ofertas</h3>      
-                <img src="images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
-                <!--iconito de camión-->
-                <p >$6.770</p>
-                <p>40% off</p>
-                <h4>Cafetera Moulinex</h4>
-                <img src="images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
-                <!--iconito de camión-->
-                <p >$230.000</p>
-                <p>20% off</p>
-                <h4>MacBook Pro 2019</h4>
-                <img src="images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
-                <!--iconito de camión-->
-                <p >$70.500</p>
-                <p>10% off</p>
-                <h4>Teléfono móvil Samsung Galaxy S10</h4>
-                <img src="images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
-                <!--iconito de camión-->
-                <p >$23.200</p>
-                <p>5% off</p>
-                <h4>SmartTv Samsung 43"</h4>
-            </section>
+            <section class="ultima-visita">
+            <h3>Basado en tu ultima visita</h3>
+            <div class="productos">
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>                   
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-macbook-pro-2019.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>                   
+                    <p class="precio">%230.000</p>
+                    <p class="descuento">20% off</p>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-samsung-galaxy-s10.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>                   
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-tv-samsung-smart.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">%23.200</p>
+                    <p class="descuento">5% off</p>
+                    <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                </div>
+            </article>
+            </div>
+        </section>
+        <section>
+            <h3>Ofertas</h3>
+            <div class="productos">
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>                   
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-macbook-pro-2019.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>                   
+                    <p class="precio">%230.000</p>
+                    <p class="descuento">20% off</p>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-samsung-galaxy-s10.jpg">
+                <div class="articulo">
+                    <i class="fas fa-truck"></i>                  
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
+            </article>
+            <article>
+                <img src="/images/img-tv-samsung-smart.jpg">
+                <div class="articulo">                 
+                    <i class="fas fa-truck"></i>
+                    <p class="precio">%23.200</p>
+                    <p class="descuento">5% off</p>
+                    <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                </div>
+            </article>
+            </div>
+        </section>
         </main>
         <footer>
+            <div>
+                <i class="fa-solid fa-credit-card"></i>
+                <h3>Pagá con tarjeta o en efectivo</h3>
+
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </div>
+            <div>
+                <i class="fa-solid fa-gift"></i>
+                <h3>Envío gratis desde $ 2.500</h3>
+
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </div>
+            <div>
+                <i class="fa-solid fa-user-shield"></i>
+                <h3>Seguridad, de principio a fin</h3>
+
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+            </div>
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </footer>
     </body>
 </html>
