--- a/views/register.html
+++ b/views/register.html
@@ -41,5 +41,80 @@
     <section class="banner">
         <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
     </section>
+    <main class="registro">
+        <form action="/" method="post">
+            <div>
+                <h4>Nombre y apellido</h4>
+                <input type="text" name="nombre" required>
+            </div>
+            <br>
+            <div>
+                <h4>Nombre de usuario</h4>
+                <input type="text" name="usuario" required>
+            </div>
+            <br>
+            <div>
+                <h4>Fecha de nacimiento</h4>
+                <input type="date" name="nacimiento" required>
+            </div>
+            <br>
+            <div>
+                <h4>Domicilio</h4>
+                <input type="text" name="domicilio" required>
+            </div>
+            <br>
+            <h4>Perfil de usuario</h3>
+            <div class="profile">
+                <input type="radio" name="perfil" value="comprar" id="comprar">
+                <label for="comprar">Comprador</label>
+                <input type="radio" name="perfil" value="vender" id="vender">
+                <label for="vender">Vendedor</label>
+            </div>
+            <br>
+            <h4>Intereses</h4>
+                <div class="interests">
+                    <div>
+                        <input type="checkbox" name="intereses" value="Electro">
+                        <label for="a">Electro</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="intereses" value="Moda">
+                        <label for="b">Moda</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="intereses" value="Hogar">
+                        <label for="c">Hogar</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="intereses" value="Juguetería">
+                        <label for="d">Juguetería</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="intereses" value="vida sana">
+                        <label for="e">Vida sana</label>
+                    </div>
+                </div>
+                <br>
+                <div>
+                    <h4>Foto de usuario</h4>
+                    <input type="file" name="avatar">
+                </div>
+                <br>
+                <div>
+                    <h4>Contraseña</h4>
+                    <input type="password" name="pass" placeholder="Elegí tu contraseña">
+                    <br>
+                    <input type="password" name="pass_confirm" placeholder="Confirmá tu contraseña">
+                </div>
+                <br>
+                <div>
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Borrar">
+                </div>
+                <br>
+
+        </form>
+    </main>
+    <footer></footer>
 </body>
 </html>
