--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,15 +22,19 @@ header {
 
 .logo {
     width: 50%;
+    justify-content: space-around;
     align-items: center;
     padding: 10px;
     max-width: 400px;
 }
 
+.cuotas {
+    display: flex;
+}
+
 .form {
     display: flex;
-    align-items: top;
-    width: 50%;
+    width: 70%;
     height: 24px;
 }
 
@@ -162,6 +166,41 @@ main section h3{
     margin: 20px 0px;
 }
 
+footer {
+    background-color: white;
+    padding-top: 20px;
+    width: 100%;
+  }
+  
+  footer div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #104aa2;
+    font-size: 2rem;
+    margin-bottom: 10px;
+  }
+  
+  footer h4 {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    color: #676767;
+    margin: 0px;
+  }
+  
+  footer p {
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    color: #676767;
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin: 0px;
+    line-height: 19px;
+  }
 
 
 @media (min-width: 361px) {
@@ -200,6 +239,10 @@ main section h3{
 @media (min-width: 769px) {
     .productos article {
         width: 22%;
+    }
+
+    .top-header{
+        width: 100%;
     }
     
 }
