--- a/views/register.html
+++ b/views/register.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/register.css" rel="stylesheet">
     </head>
 <body>
     <header>
@@ -117,22 +118,22 @@
     </main>
     <footer>
             <div>
-                <i class="fa-solid fa-credit-card"></i>
-                <h3>Pagá con tarjeta o en efectivo</h3>
+                <i class="fas fa-credit-card"></i>
+                <h4>Pagá con tarjeta o en efectivo</h3>
 
                 <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
             </div>
             <div>
-                <i class="fa-solid fa-gift"></i>
-                <h3>Envío gratis desde $ 2.500</h3>
+                <i class="fas fa-gift"></i>
+                <h4>Envío gratis desde $ 2.500</h3>
 
                 <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                     productos. Es un beneficio de Mercado Puntos.</p>
             </div>
             <div>
-                <i class="fa-solid fa-user-shield"></i>
-                <h3>Seguridad, de principio a fin</h3>
+                <i class="fas fa-user-shield"></i>
+                <h4>Seguridad, de principio a fin</h3>
 
                 <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                     porque estás siempre protegid@.</p>
